--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta charset="utf-8">
     <title>FakeCoffee</title>
+    <link rel="icon" href="images/favicon.ico">
 
     <link rel="stylesheet" href="css\styles.css">
 
@@ -20,13 +21,13 @@
       <table>
         <tr>
           <td>
-            <h3><a href="index.html">HOME</a></h3>
+            <h3><a class="NavLinks" href="index.html">HOME</a></h3>
           </td>
           <td>
-            <h3><a href="menu.html">MENU</a></h3>
+            <h3><a class="NavLinks" href="menu.html">MENU</a></h3>
           </td>
           <td>
-            <h3><a href="about.html">ABOUT</a></h3>
+            <h3><a class="NavLinks" href="about.html">ABOUT</a></h3>
           </td>
 
         </tr>
@@ -41,7 +42,9 @@
 
     </div>
 
-    <hr>
+    <div class="RuleDiv1">
+      <hr>
+    </div>
 
     <div class="SecondContainer">
       <div class="About">
@@ -52,7 +55,9 @@
 
     </div>
 
-    <hr>
+    <div class="RuleDiv2">
+      <hr>
+    </div>
 
     <div class="ThirdContainer">
       <h2>Crafted to Perfection</h2>
@@ -85,7 +90,9 @@
 
     </div>
 
-    <hr>
+    <div class="RuleDiv3">
+      <hr>
+    </div>
 
     <div class="BottomContainer">
       <h2>Find Us</h2>
@@ -97,13 +104,13 @@
       <table>
         <tr>
           <td>
-            <h3><a href="https://twitter.com/khanxmo" target="_blank">TWITTER</a></h3>
+            <h3><a class="Links" href="https://twitter.com/khanxmo" target="_blank">TWITTER</a></h3>
           </td>
           <td>
-            <h3><a href="https://github.com/KhanxMo" target="_blank">GITHUB</a></h3>
+            <h3><a class="Links" href="https://github.com/KhanxMo" target="_blank">GITHUB</a></h3>
           </td>
           <td>
-            <h3><a href="https://khanxmo.github.io/personalv1/" target="_blank">WEBSITE</a></h3>
+            <h3><a class="Links" href="https://khanxmo.github.io/personalv1/" target="_blank">WEBSITE</a></h3>
           </td>
         </tr>
       </table>
